--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,12 @@ __pycache__/
 *.pyc
 saved/
 saved4plot/
+saved4plot5/
+saved4plot6-B/
+saved4plot7-C/
+saved4plot7-C/
+RelatedWork/
+Presentation/
+arXiv/
 ec2_ssh/
 plot/
